--- a/build-dockers.yml
+++ b/build-dockers.yml
@@ -2,9 +2,9 @@ config:
   # Backtrack is where the root of the project is, relative to this file
   backtrack: .
   # Use this for prefix when building
-  prefix: borchk-local
+  prefix: borchk-java-local
 images:
-  borchk:
+  borchk-java:
     type: prod
     context: .
     dockerfile: src/main/docker/Dockerfile
