--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/>
     </parent>
 
-    <artifactId>borchk</artifactId>
+    <artifactId>borchk-java</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
