--- a/src/main/docker/config.json
+++ b/src/main/docker/config.json
@@ -4,5 +4,14 @@
         "dk.dbc": {
             "level": "DEBUG"
         }
+    },
+    "hazelcast": {
+        "clusterName": "iscrum-borchk",
+        "cacheConfig": {
+            "BORCHK_CACHE": {
+                "timeout": "${CACHE_BORCHK}",
+                "timeUnit": "Minutes"
+            }
+        }
     }
 }
