--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <org.jvnet.jaxb2_commons>0.12.0</org.jvnet.jaxb2_commons>
         <javax.xml.webservices.api>2.0.1</javax.xml.webservices.api>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
+        <hazelcast.version>3.10.5</hazelcast.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,14 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
