--- a/pom.xml
+++ b/pom.xml
@@ -14,27 +14,27 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>mavenrepo.dbc.dk</id>
-            <name>mavenrepo</name>
-            <url>http://mavenrepo.dbc.dk/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <!--<distributionManagement>-->
+        <!--<snapshotRepository>-->
+            <!--<id>mavenrepo.dbc.dk</id>-->
+            <!--<name>mavenrepo</name>-->
+            <!--<url>http://mavenrepo.dbc.dk/content/repositories/snapshots</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
 
-    <repositories>
-        <repository>
-            <id>mavenrepo.dbc.dk</id>
-            <url>http://mavenrepo.dbc.dk/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>mavenrepo.dbc.dk</id>-->
+            <!--<url>http://mavenrepo.dbc.dk/nexus/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>mavenrepo.dbc.dk</id>
-            <url>http://mavenrepo.dbc.dk/nexus/content/groups/public</url>
-        </pluginRepository>
-    </pluginRepositories>
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<id>mavenrepo.dbc.dk</id>-->
+            <!--<url>http://mavenrepo.dbc.dk/nexus/content/groups/public</url>-->
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
 
     <properties>
         <javax.json.version>1.0.4</javax.json.version>
